syntax = "proto3";

package order;
option go_package = "./pb";

// Order Service Definition
service Order {
  // Create voucher order (seckill)
  rpc CreateVoucherOrder(CreateVoucherOrderReq) returns (CreateVoucherOrderResp);

  // Get voucher order by ID
  rpc GetVoucherOrder(GetVoucherOrderReq) returns (GetVoucherOrderResp);

  // List voucher orders by user
  rpc ListVoucherOrdersByUser(ListVoucherOrdersByUserReq) returns (ListVoucherOrdersByUserResp);

  // Cancel voucher order
  rpc CancelVoucherOrder(CancelVoucherOrderReq) returns (CancelVoucherOrderResp);

  // Pay voucher order
  rpc PayVoucherOrder(PayVoucherOrderReq) returns (PayVoucherOrderResp);

  // Use voucher order
  rpc UseVoucherOrder(UseVoucherOrderReq) returns (UseVoucherOrderResp);
}

// Messages
message VoucherOrderInfo {
  int64 id = 1;
  int64 user_id = 2;
  int64 voucher_id = 3;
  int32 pay_type = 4;
  int32 status = 5;
  string create_time = 6;
  string pay_time = 7;
  string use_time = 8;
  string refund_time = 9;
  string update_time = 10;
}

message CreateVoucherOrderReq {
  int64 user_id = 1;
  int64 voucher_id = 2;
}

message CreateVoucherOrderResp {
  int64 order_id = 1;
  bool success = 2;
  string message = 3;
}

message GetVoucherOrderReq {
  int64 order_id = 1;
}

message GetVoucherOrderResp {
  VoucherOrderInfo order = 1;
}

message ListVoucherOrdersByUserReq {
  int64 user_id = 1;
  int32 status = 2;
}

message ListVoucherOrdersByUserResp {
  repeated VoucherOrderInfo orders = 1;
}

message CancelVoucherOrderReq {
  int64 order_id = 1;
  int64 user_id = 2;
}

message CancelVoucherOrderResp {
  bool success = 1;
}

message PayVoucherOrderReq {
  int64 order_id = 1;
  int64 user_id = 2;
  int32 pay_type = 3;
}

message PayVoucherOrderResp {
  bool success = 1;
}

message UseVoucherOrderReq {
  int64 order_id = 1;
  int64 user_id = 2;
}

message UseVoucherOrderResp {
  bool success = 1;
}
